--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,19 @@
 Package: MRggi
-Title: What the Package Does (One Line, Title Case)
+Title: Inference of gene-gene interactions using Mendelian randomization
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Wonseok", "Oh", , "hiows@naver.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0009-0002-0687-8466"))
+Description: MR-GGI applies one gene as the exposure and another as the outcome, using causal cis-single-nucleotide polymorphisms(cis-SNP) as instrumental variables in mendelian randomization(MR) model. 
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Imports:
+    RColorBrewer,
+    colorspace,
+    igraph,
+    mvtnorm,
+    visNetwork,
+    susieR
+Remotes: stephenslab/susieR    
